--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           
 <!-- código omitido -->
 
-</label>
+<label>
 <ul class="lista-menu">
   <li class="lista-menu_titulo">Categorias</li>
   <li class="lista-menu_item">
@@ -49,7 +49,7 @@
     <a href="#" class="lista-menu_link">Design & UX</a>
   </li>
 </ul>
-
+</label>
 <!-- código omitido -->
 
         </header>
