--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <header class="cabeçalho">
                 <span class="cabeçalho__menu-hamburguer"></span>
+                <a href="#"><img src="./img/Menu.svg" alt="Men "></a>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks">
-                <a href="#"><img src="./img/Menu.svg" alt="Menu de fsds"></a>
                 <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
                 <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
                 <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
