--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
-    <h1>Alurabook</h1>
-
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="img/Favoritos.svg"></a>
+        <a href="#"><img src="img/Compras.svg"></a>
+        <a href="#"><img src="img/Usuario.svg"></a>
+    </header>
 </body>
+
+
 
 </html>
